<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:textSize="16sp"/>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_your_name"
        android:text="@string/are_you_sure_want_to_log_out"
        android:gravity="center"
        android:textColor="@color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:padding="16dp">

        <View
            android:id="@+id/centerShim"
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/centerShim"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/centerShim"
            android:gravity="center"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/yes"
            android:textColor="@color/text_color_red" />

    </RelativeLayout>
</LinearLayout>
