<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.um.login.LoginActivity"
    android:background="@color/orange_main">

    <ImageView
        android:id="@+id/img_rodda"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/text_in_login"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_username"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="305dp" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/outline_email_black_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/open_sans"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="16sp"
        android:background="@drawable/bg_text_rounded"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <EditText
        android:id="@+id/edit_Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/outline_vpn_key_black_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/open_sans"
        android:hint="@string/password"
        android:textSize="14sp"
        android:background="@drawable/bg_text_rounded"
        android:padding="16dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_username" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_Password" />

    <TextView
        android:id="@+id/tv_haventAcc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto"
        android:gravity="end"
        android:text="@string/no_have_account"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_regis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tv_regis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto"
        android:text="@string/register"
        android:textColor="@color/text_color_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/tv_haventAcc"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


</androidx.constraintlayout.widget.ConstraintLayout>