<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.dataform.DataFormActivity">

    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/pb_location"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="7dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_location"
        app:layout_constraintTop_toBottomOf="@id/tv_tipsLocation" />


    <TextView
        android:id="@+id/tv_lokasi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:labelFor="@id/et_lokasi"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/lokasi"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tipsLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tips_location"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_lokasi"/>

    <EditText
        android:id="@+id/et_lokasi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="Masukkan Lokasi Jalan"
        android:inputType="none"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toStartOf="@+id/btn_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tipsLocation" />

    <Button
        android:id="@+id/btn_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/lokasi_saya"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tipsLocation" />


    <Button
        android:id="@+id/btn_kirim"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/round_button"
        android:text="@string/kirimkan_laporan"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>